# rust_web

./: Cargo.toml  README.md  articals.rs
webservice/: Cargo.toml
webservice/src/: errors.rs  routers.rs
webservice/src/db/: admins.rs  articles.rs  drafts.rs  mod.rs  users.rs
webservice/src/db/sql/: insert_db_tags.sql  new_db_articles.sql  new_db_comment.sql  new_db_favorit.sql  new_db_tags.sql  new_db_users.sql  select_article.sql  select_class.sql  tags_articles.sql
webservice/src/entity/: Cargo.toml
webservice/src/entity/src/: articles.rs  comments.rs  favorite.rs  markdowns.rs  mod.rs  prelude.rs  tags.rs  tags_articles.rs  users.rs
webservice/src/handlers/: admin_handlers.rs  article_handlers.rs  draft_handlers.rs  first_handler.rs  mod.rs  releases  user_handlers.rs
webservice/src/models/: comment.rs  descriptor.rs  markdown.rs  mod.rs  user.rs
webservice/src/state/: mod.rs  request_state.rs  response_state.rs
