[package]
name = "webservice"
version = "0.1.0"
edition = "2021"
default-run = "main-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.7.0"
actix-cors = "0.6.1"
dotenv = "0.15.0"
env_logger = "0.8"
log = "0.4"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0"
chrono = {version = "0.4.19", features = ["serde"]}
openssl = {version = "0.10.40", features = ["vendored"]}
sqlx = {version = "0.6.0", default_features = false, features = [
				"postgres",
				"runtime-tokio-rustls",
				"macros",
				"chrono",
]}
sea-orm = {version = "0.8.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]}



[[bin]]
name = "main-service"
